--- a/index.html
+++ b/index.html
@@ -92,6 +92,9 @@
     <div class="circle circle-1"></div>
     <div class="circle circle-2"></div>
 
+    <!-- ThreeJS Background -->
+    <canvas id="threejs-canvas"></canvas>
+
     <main class="container">
         <!-- Hero Section with SVG Morphing -->
         <section class="section hero">
@@ -300,6 +303,8 @@
        
     
 
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
+    <script src="three-bg.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/ScrollTrigger.min.js"></script>
     <script src="script.js"></script>
