--- a/projects.html
+++ b/projects.html
@@ -83,9 +83,12 @@
 
     <div class="circle circle-2" style="top: 20%; left: 10%;"></div>
 
+    <!-- ThreeJS Background -->
+    <canvas id="threejs-canvas"></canvas>
+
     <main class="container">
         <section class="section">
-            <h2 class="fade-in">Selected Works</h2>
+            <h2 class="fade-in">My Works</h2>
             <div class="project-grid">
                 
                 <!-- Project 1 -->
@@ -158,6 +161,8 @@
         </section>
     </main>
 
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
+    <script src="three-bg.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/ScrollTrigger.min.js"></script>
     <script src="script.js"></script>
